load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lcov2json_lib",
    srcs = ["main.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/cmd/lcov2json",
    visibility = ["//visibility:public"],
)

go_test(
    name = "lcov2json_test",
    srcs = ["main_test.go"],
    args = ["-test.timeout=295s"],
    data = glob(["testdata/**"]),
    embed = [":lcov2json_lib"],
    deps = ["@com_github_cockroachdb_datadriven//:datadriven"],
)

go_binary(
    name = "lcov2json",
    embed = [":lcov2json_lib"],
    visibility = ["//visibility:public"],
)
